feat: Complete benchmark overhaul with enhanced metrics and dashboards
Major Updates:
✅ Removed failing frameworks (Protobuf, FlatBuffers)
✅ Consolidated to 13 production-ready frameworks
✅ Created unified management script (manage.sh)
✅ Implemented enhanced metrics collection with 4 phases
✅ Added Grafana dashboards for visualization
✅ Completely rewrote documentation

Framework Changes:
- Removed protobuf-poc and flatbuffers-poc (build issues)
- Fixed component scanning in FST, Thrift, Cap'n Proto
- All 13 frameworks now fully operational

New Features:
1. Enhanced Benchmark Script (enhanced_benchmark.py)
   - Network handshake metrics (DNS, TCP, TLS)
   - Serialization performance (avg, P50, P95, P99, throughput)
   - Resource utilization (CPU, memory, threads)
   - Transport efficiency (payload size, compression, throughput)
   - Prometheus metrics export

2. Unified Management (manage.sh)
   - Single script for all operations
   - Commands: start, stop, restart, status, benchmark, analyze, logs, clean
   - Health checking for all services
   - Color-coded output
   - Comprehensive help documentation

3. Grafana Dashboards
   - Performance Overview dashboard
   - Resource Utilization dashboard
   - Pre-configured panels and filters
   - Prometheus integration
   - Complete setup documentation

4. Complete Documentation Rewrite
   - Updated README with 13 frameworks
   - Enhanced metrics collection guide
   - Grafana setup instructions
   - Best practices and troubleshooting
   - Framework selection guidelines

Metrics Collection Phases:
- Phase 1: Network Handshake (connection timing)
- Phase 2: Serialization Performance (latency percentiles)
- Phase 3: Resource Utilization (CPU/memory monitoring)
- Phase 4: Transport Efficiency (compression ratios)

Files Added:
- manage.sh - Unified management script
- enhanced_benchmark.py - Comprehensive metrics collection
- analyze_metrics.py - Results analysis
- dashboards/serialization-performance.json - Grafana performan